@@ -1,7 +1,7 @@
 [CONF]
 
 NUMGAMES = 5
-ACTIONCAM = 1
+ACTIONCAM = 0
 
 [0]
 
