@@ -1,5 +1,5 @@
 [DISPLAY]
-SCREENWIDTH = 1200
+SCREENWIDTH = 800
 SCREENHEIGHT = 600
 FULLSCREEN = false
 
