@@ -1,7 +1,8 @@
 Changelog:
 
 8.21.13
-PlayerBack slows when turning
+PlayerBack slows when turning. Speed lost directly proportional to degrees turned. Values might be too nerfed now, needs balancing.
+PlayerBack rotation code made incredibly smarter. Should have no more direction switches when rotating too fast or wrong way throws.
 
 8.20.13
 PlayerTwoTouch has a little extra curve
